<resources>
    <string name="app_name">Mswipe Kesumadram</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="mldp_not_supported">MLDP is not supported</string>
    <string name="version">buildVersion1.6</string>
    <string name="select_a_scale_device">Select a scale device</string>
    <string name="btnstop">Stop</string>
    <string name="full_load">Full Load</string>
    <string name="no_load">No Load</string>
    <string name="capacity">Capacity</string>
    <string name="resolution">Resolution</string>
    <string name="login_id">Login Id</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="lot_id">Lot Id</string>
    <string name="seller_name">Seller Name</string>
    <string name="commodity">Commodity</string>
    <string name="bag_type">Bag Type</string>
    <string name="fee_category">FeeCategory</string>
    <string name="trader_name">Trader Name</string>
    <string name="lot_price">Lot Price</string>
    <string name="next">Next</string>
    <string name="welcome_user">Welcome User</string>
    <string name="add_bag">Add Bag</string>
    <string name="submit">Submit</string>
    <string name="print">Print</string>
    <string name="fetch_weight">Fetch Weight</string>
    <string name="delete_bag">Delete Bag</string>
    <string name="url">http://164.100.94.195/NamWebSrv/rest/</string>
    <string name="for_help_contact_9493xxxxxx">For Help Contact 9493xxxxxx</string>
    <string name="not_connected">Not Connected</string>
    <string name="_11">11</string>
    <string name="no_of_bags">No of Bags</string>
    <string name="total_weight_in_quintal">Total Weight in Quintal</string>
    <string name="bag_weight">Bag Weight</string>
    <string name="bag">Bag</string>
    <string name="_1_kg">1 Kg</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit ?</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="do_you_want_to_delete_bag">Do you want to delete bag</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>
    <string name="login">Login</string>
    <string name="_1">1</string>
    <string name="please_enter_lot_id">Please Enter Lot Id</string>
    <string name="open_bluetooth">Scan</string>
    <string name="close_bluetooth">Close</string>
    <string name="print_data">Print Data</string>
    <string name="save">Save</string>
    <string name="quantity_kg">QUANTITY (KG)</string>
    <string name="serial_no">SERIAL NO</string>
    <string name="ca_name">CA Name : </string>
    <string name="lot_id_val">Lot Id : </string>
    <string name="total_no_of_bags">Total No OF Bags : </string>
    <string name="gross_weight_qt">Gross Wt (Qt) : </string>
    <string name="bag_weight_qt">Bag Wt (Qt) : </string>
    <string name="net_weight_qt">Net Wt (QT) : </string>
    <string name="bid_price">Lot Amt (RS) : </string>
    <string name="net_amt">Net Amt (RS) : </string>
    <string name="actual_no_of_bags">Actual No Of Bags : </string>
    <string name="weighing_slip">Weighing Slip</string>
    <string name="sellername">Seller Name :</string>
    <string name="commodityvalue">Commodity :</string>
    <string name="bagtype">Bag Type : </string>
    <string name="tradername">Trader Name : </string>
    <string name="close_bt">Close</string>
    <string name="exit_dialog_prompt">Exit App ?</string>
    <string name="logout_dialog_prompt">Do you want to Logout ?</string>
    <string name="summary_dialog_prompt">Do you want to go back?</string>
    <string name="no_paired_devices_added">No Paired Devices added</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="retry">Retry</string>

</resources>
