<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/margin_90dp"
            android:layout_height="@dimen/margin_50dp"
            android:src="@drawable/conquest1" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_150dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_20dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="Logout"
            android:textColor="@color/color_26d"
            android:textSize="@dimen/textsize_20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/welcomeuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textColor="@color/black_000"
        android:textSize="@dimen/textsize_20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lot_id"
                    android:textColor="@color/black_000"
                    android:textSize="@dimen/textsize_20sp" />

                <AutoCompleteTextView
                    android:id="@+id/searchLotDetails_2"
                    android:layout_width="@dimen/margin_220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginRight="@dimen/margin_5dp"
                    android:background="@drawable/round_border"
                    android:hint="@string/please_enter_lot_id"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="@dimen/margin_5dp"
                    android:singleLine="true">

                    <requestFocus />
                </AutoCompleteTextView>

                <ImageView
                    android:id="@+id/searchbtn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_35dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:background="@drawable/round_border"
                    android:src="@drawable/search_button" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:padding="@dimen/margin_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seller_name"
                    android:textColor="@color/black_000"
                    android:textSize="@dimen/textsize_20sp" />

                <TextView
                    android:id="@+id/sellerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_35dp"
                    android:background="@drawable/digi_screen"
                    android:padding="@dimen/margin_5dp"
                    android:textColor="@color/black_000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commodity"
                    android:textColor="@color/black_000"
                    android:textSize="@dimen/textsize_20sp" />

                <TextView
                    android:id="@+id/commodity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_40dp"
                    android:background="@drawable/digi_screen"
                    android:padding="@dimen/margin_5dp"
                    android:textColor="@color/black_000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lot_price"
                    android:textColor="@color/black_000"
                    android:textSize="@dimen/textsize_20sp" />

                <TextView
                    android:id="@+id/lotPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_64dp"
                    android:background="@drawable/digi_screen"
                    android:padding="@dimen/margin_5dp"
                    android:textColor="@color/black_000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trader_name"
                    android:textColor="@color/black_000"
                    android:textSize="@dimen/textsize_20sp" />

                <TextView
                    android:id="@+id/tradderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_28dp"
                    android:background="@drawable/digi_screen"
                    android:padding="@dimen/margin_5dp"
                    android:textColor="@color/black_000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bag_type"
                    android:textColor="@color/black_000"
                    android:textSize="@dimen/textsize_20sp" />

                <Spinner
                    android:id="@+id/bagType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_63dp"
                    android:background="@drawable/gradient_spinner"></Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:padding="@dimen/margin_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fee_category"
                    android:textColor="@color/black_000"
                    android:textSize="@dimen/textsize_20sp" />

                <Spinner
                    android:id="@+id/fee_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_30dp"
                    android:background="@drawable/gradient_spinner"></Spinner>

            </LinearLayout>


            <Button
                android:id="@+id/next"
                android:layout_width="@dimen/margin_100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_160dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:background="@drawable/custom_lightgreen_cloud_button"
                android:gravity="center"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/black_000"
                android:textSize="@dimen/textsize_20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>