<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/iv_exit_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:padding="15dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_exit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_exit_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/do_you_really_want_to_exit"
        android:textAllCaps="false"
        android:textSize="@dimen/textsize_14sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal" />

    <RelativeLayout
        android:layout_below="@id/tv_exit_text"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_exit_text"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:weightSum="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/b_exit_no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="@string/no"
            android:layout_weight="0.5"
            android:textSize="@dimen/textsize_14sp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />


        <RelativeLayout
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/colorPrimary" />


        <Button
            android:id="@+id/b_exit_yes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="@dimen/textsize_14sp"
            android:background="@android:color/transparent"
            android:text="@string/exit"
            android:layout_weight="0.5"
            android:textAllCaps="false"
            android:textColor="@color/color_FF0000" />
    </LinearLayout>

</RelativeLayout>
