<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/margin_90dp"
            android:layout_height="@dimen/margin_50dp"
            android:src="@drawable/conquest1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_weight="0.40">
            <Spinner
                android:id="@+id/bluetoothDevices"
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/margin_10dp"
                android:background="@drawable/gradient_spinner"
                android:layout_height="@dimen/margin_40dp"/>
        </LinearLayout>
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:gravity="bottom"
            android:layout_height="match_parent"
            android:text="Kg"/>-->

        <!-- <Button
             android:id="@+id/add"
             android:layout_width="@dimen/margin_60dp"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/margin_10dp"
             android:background="@drawable/custom_lightgreen_cloud_button"
             android:text="@string/add"
             android:textAllCaps="false"
             android:textColor="@color/black_000"
             android:textSize="@dimen/textsize_14sp" />-->
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_220dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/digi_screen">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/bags_list_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp">

        <TextView
            android:id="@+id/numBag"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_40dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/no_of_bags"
            android:textColor="@color/black_000"
            android:background="@drawable/digi_screen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_40dp"
            android:gravity="center"
            android:layout_weight=".5"
            android:textColor="@color/black_000"
            android:id="@+id/totalWeight"
            android:text="@string/total_weight_in_quintal"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:background="@drawable/digi_screen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_10dp"
        android:weightSum="1"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_10dp">

        <Button
            android:id="@+id/add_bag_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/custom_lightgreen_cloud_button"
            android:text="@string/add_bag"
            android:textAllCaps="false"
            android:textColor="@color/black_000"
            android:textSize="@dimen/textsize_20sp" />
        <Button
            android:id="@+id/removebag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="@dimen/margin_50dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/custom_lightgreen_cloud_button"
            android:text="@string/delete_bag"
            android:textAllCaps="false"
            android:textColor="@color/black_000"
            android:textSize="@dimen/textsize_20sp" />

        <!-- <Button
             android:id="@+id/fetch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_60dp"
             android:layout_marginTop="@dimen/margin_10dp"
             android:background="@drawable/custom_lightgreen_cloud_button"
             android:text="@string/fetch_weight"
             android:textAllCaps="false"
             android:textColor="@color/black_000"
             android:textSize="@dimen/textsize_20sp" />-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_10dp">

        <!--<Button
            android:id="@+id/btnOnOff"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_blue_on_button"
            android:text="ON"
            android:textColor="#fff" />-->

        <!--<Button
            android:id="@+id/bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_70dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/custom_lightgreen_cloud_button"
            android:text="@string/bag"
            android:textAllCaps="false"
            android:textColor="@color/black_000"
            android:textSize="@dimen/textsize_20sp" />-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black_000"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:text="@string/bag_weight"/>
        <EditText
            android:id="@+id/onlyBagWeight"
            android:layout_width="@dimen/margin_80dp"
            android:layout_height="@dimen/margin_30dp"
            android:gravity="center"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin_5dp"
            android:text="@string/_1"
            android:textColor="@color/black_000"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:background="@drawable/digi_screen" />
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="Kg"/>
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:background="@drawable/custom_lightgreen_cloud_button"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/black_000"
            android:textSize="@dimen/textsize_20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:id="@+id/blueDisable"
        android:visibility="gone"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_height="50dp">
        <Button
            android:layout_width="178.0dip"
            android:layout_height="wrap_content"
            android:id="@+id/enableBlutooth"
            android:background="@color/colorAccent"
            android:textStyle="italic"
            android:text="Enable Bluetooth"/>
    </LinearLayout>
</LinearLayout>
